# CogerLaPala

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  pyrightconfig.json  requirements.txt
examples/: linkedin_request.json  sample_request.json
scripts/: run_pipeline.py
src/cogerlapala/: __init__.py  __main__.py  config.py  entrypoint.py  gui_app.py  launcher.py  main.py  models.py
src/cogerlapala/services/: __init__.py  ai_mapper.py  application_orchestrator.py  browser_automator.py  linkedin_easy_apply.py  matching.py  pipeline.py
src/cogerlapala/services/job_sources/: base.py  demo_source.py  linkedin_source.py
