[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogerlapala"
version = "0.1.0"
description = "Autonomous job discovery and application pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "playwright>=1.50.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
